Location/datetime/price tabs fixed Travel and Accommodation tabs changed, checking to see appearance on mobile

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html {
     background-attachment: fixed;
     background-size: cover;
 
+    /*fix the height of the background for mobile devices*/
     min-height: 100%;
 }
 
@@ -34,6 +35,7 @@ img {
     float: left;
     text-align: right;
 }
+
 .right {
     width: 60%;
     margin-left: 20px;
@@ -60,10 +62,7 @@ img {
 
 .description {
     padding-left: 15px;
-}
-
-#eventtitle {
-    font-size: 200%;
+    margin-bottom: 10px;
 }
 
 #search {
@@ -108,12 +107,45 @@ img {
     min-width: 855px;
 }
 
-#travelaccommodation {
+#map {
+    width: 35%;
+    float: left;
+    min-width: 300px;
+    max-width: 425px;
+}
+
+#travelaccommodationfull {
+    width: 810px;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+@media screen and (max-width: 800px){
+    #travelaccommodationfull {
+        width: 410px;
+        margin-left:auto;
+        margin-right:auto;
+    }
+}
+
+
+
+.travelaccommodation {
     font-family: "Century Gothic", sans-serif;
     font-weight: bold;
     background-color: #FA8B60;
     height: auto;
-    width: auto;
+    width: 320px;
     padding: 25px;
     border: 10px solid #ef6d3b;
+}
+
+.optionslist {
+    float: left;
+    text-align: left;
+}
+
+.priceslist {
+    margin-left: 20px;
+    text-align: right;
 }
